force-app/main/default/objects/BrandSalesCompany__c/BrandSalesCompany__c.object-meta.xml
<CustomObject>
    <label>Matrice Brand</label>
    <nameField>
        <label>Matrice Brand  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matrice Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>