force-app/main/default/objects/BrandSalesCompany__c/fields/ActiveFlgforBrand__c.field-meta.xml
<CustomField>
    <fullName>ActiveFlgforBrand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flg Attivo per Brand</label>
    <type>Checkbox</type>
</CustomField>