force-app/main/default/objects/BrandSalesCompany__c/fields/CommonSupply__c.field-meta.xml
<CustomField>
    <fullName>CommonSupply__c</fullName>
    <label>Comune Fornitura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>