force-app/main/default/objects/BrandSalesCompany__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Servizio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>